--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "google-map-react": "^1.1.4",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -15,9 +16,10 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-lazyload": "^2.6.2",
+    "react-responsive-carousel": "^3.2.9",
     "react-responsive-picture": "^3.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.3",
     "react-scroll-parallax": "^2.1.2"
   },
   "scripts": {
@@ -43,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.5.0",
+    "cypress": "^4.12.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
